--- a/css/blocks/social.less
+++ b/css/blocks/social.less
@@ -71,7 +71,7 @@
         width: 2.7rem;
         height: 2.7rem;
 
-        &-git {
+        &-git {                      /* Иконка GitHub */
             padding: 7px 7px;
             width: 2.7rem;
             height: 2.7rem;
