--- a/css/style.less
+++ b/css/style.less
@@ -40,6 +40,7 @@ h1, h2, h3, h4, h5, h6 {
 @import "blocks/work";
 @import "blocks/portfolio";
 @import "blocks/about";
+@import "blocks/news";
 
 
 
