Plus 2 modals (1 in process)

--- a/css/blocks/modal-work.less
+++ b/css/blocks/modal-work.less
@@ -118,7 +118,7 @@
     z-index: 1;
     outline: none;
     border: none;
-    background-color: @white;
+    background-color: transparent;
     border-radius: 50%;
 
     &:hover .modal__pleace-img {
