--- a/css/blocks/modal.less
+++ b/css/blocks/modal.less
@@ -13,12 +13,14 @@
     top: 0;
     left: 0;
     z-index: 1000;  //Делаем чтобы маска, и потом модальное окно было поверх всего содержимого
+
+    overflow: auto;
 }
 
 .modal__dialog {
     position: relative;
     border-radius: 2.3rem;
-    width: 100%; //Ширина 100%, в max-width указываем какая именно максимальная ширину будет.
+    width: 100%; //Ширина 100%, в max-width указываем какая именно максимальная ширина будет.
     max-width: 1200px; //Максимальная ширина 1200px, чтобы модальное окно при сужении не вылазило за экран, было адаптивным.
     margin: auto; //Выровняли по центру по горизонтали и вертикали
 
