--- a/css/blocks/btn.less
+++ b/css/blocks/btn.less
@@ -15,6 +15,7 @@
         padding: 1rem 1.7rem;    /* Задаем padding'i от текста до границ */
         transition: .2s linear;
         overflow: hidden;        /* Скрываем лишние элементы .border'a, чтобы наводить именно на кнопку и создавался эффект кольца */
+        box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
 
         + .btn {              /*(+ означает от текущего элемента к следующему переход) Если идёт кнопка, и после неё идет опять след. кнопка, то для второй кнопки делаем margin-left: 1rem;, и будет отступ только у второго элемента .btn, первый игнорируется */
           margin-left: 1rem;
