--- a/css/style.less
+++ b/css/style.less
@@ -48,6 +48,9 @@ h1, h2, h3, h4, h5, h6 {
 @import "blocks/footer";
 @import "blocks/modal";
 @import "blocks/modal-work";
+@import "blocks/modal-resume";
+@import "blocks/modal-resume-skills";
+@import "blocks/modal-contact";
 
 
 
