Third modal complete

--- a/css/blocks/modal-contact.less
+++ b/css/blocks/modal-contact.less
@@ -1,10 +1,6 @@
 //main:  ../style.less
 
 .modal__contact {
-
-}
-
-.modal__contact__inner {
     display: flex;
 }
 
@@ -14,7 +10,7 @@
 }
 
 .modal__contact__title {
-    padding-bottom: 2rem;
+    margin-bottom: 2rem;
     text-transform: uppercase;
     color: @black;
 }
@@ -30,7 +26,7 @@
 }
 
 .modal__contact__contacts {
-    
+    margin-bottom: 3rem;
 }
 
 .modal__contact__item {
@@ -107,11 +103,14 @@
     transition: all .7s ease;
 }
 
+.modal__contact__left-inner {
+    
+}
+
 .modal__contact__right {
     position: relative;
 
     width: 52%;
-    height: 676px;
 }
 
 .modal__right-photo {
