--- a/css/style.less
+++ b/css/style.less
@@ -51,6 +51,7 @@ h1, h2, h3, h4, h5, h6 {
 @import "blocks/modal-resume";
 @import "blocks/modal-resume-skills";
 @import "blocks/modal-contact";
+@import "blocks/form__group";
 
 
 
