--- a/css/blocks/modal-resume.less
+++ b/css/blocks/modal-resume.less
@@ -52,9 +52,10 @@
         box-shadow: 0 0 7px fade(@black, 100%);
         padding-right: 2rem;
     }
-}
 
-.modal__resume__button--color {
+    &:hover .modal__resume__item {
+        transform: rotate(360deg);
+    }
 
     &:hover .modal__resume__icon {
         fill: @white;
@@ -71,10 +72,7 @@
     transform: scale(1);
     transform: rotate(180deg);
  
-    .modal__resume__button--color:hover & {
-        transform: rotate(360deg);
-        
-    }
+    
 }
 
 .modal__resume__icon {
@@ -142,7 +140,7 @@
 
     &::after {
         content: "";
-        width: 0.5px;
+        width: 0.6px;
         display: block;
         height: 100%;
         background-color: @gray;
