--- a/css/blocks/modal-work.less
+++ b/css/blocks/modal-work.less
@@ -23,6 +23,9 @@
 
     transform: translate3d(-50%, -50%, 0); //Выравниваем фотографию по центру.
 
+    width: 100%;
+    height: 100%;
+
 } 
 
 .modal-work__content {
