add javascript methods + jquery

--- a/css/style.less
+++ b/css/style.less
@@ -30,8 +30,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 
-/* Blocks 
-============= */
+/* Blocks */
 
 @import "blocks/container";
 @import "blocks/header";
@@ -52,6 +51,10 @@ h1, h2, h3, h4, h5, h6 {
 @import "blocks/modal-resume-skills";
 @import "blocks/modal-contact";
 @import "blocks/form__group";
+
+
+/* Helpers */
+@import "blocks/helpers";
 
 
 
