--- a/css/blocks/modal-resume.less
+++ b/css/blocks/modal-resume.less
@@ -17,6 +17,10 @@
     display: flex;
     justify-content: center;
     margin-bottom: 4.2rem;
+
+    &--margin {
+        margin-bottom: 0;
+    }
 }
 
 .modal__resume__download {
