--- a/css/blocks/work.less
+++ b/css/blocks/work.less
@@ -89,6 +89,7 @@
     overflow: hidden;
     transform: scale(1.2);
     box-shadow: 0 0 3px fade(@black, 100%);
+    padding-right: 0.068rem;
 
     &:hover {
         background-color: @black;
