Add solve about arrow (up) and small appends

--- a/css/blocks/up.less
+++ b/css/blocks/up.less
@@ -8,12 +8,18 @@
 
     transform: rotate(180deg);
     opacity: 0;
+    
 }
 
 .btn-up-center {
     padding: 0.1rem;
+
 }
 
 .disp__block {
-    opacity: 0;
+    
+}
+
+.btn-cursor-default {
+    cursor: default;
 }
