--- a/css/blocks/work.less
+++ b/css/blocks/work.less
@@ -5,6 +5,7 @@
     border-radius: 17px;
     border: 1px solid fade(@black, 0%);
     transition: .2s linear;
+    cursor: pointer;
 
     &:hover {
             box-shadow: 0 0 25px fade(@black, 25%);
