--- a/css/style.less
+++ b/css/style.less
@@ -29,6 +29,8 @@ h1, h2, h3, h4, h5, h6 {
                               /* padding не меняют размер наших блоков */
 }
 
+/* Vendor */
+@import "vendor/slick";
 
 /* Blocks */
 
