Adaptation. Burger. @media requests

--- a/css/blocks/about.less
+++ b/css/blocks/about.less
@@ -56,3 +56,13 @@
     font-size: 0.8rem;
     color: @gray;
 }
+
+
+/* Media */
+
+@media @tablet {
+
+    .about__bigtitle {
+        font-size: 4rem;
+    }
+}
