--- a/css/vars.less
+++ b/css/vars.less
@@ -5,3 +5,6 @@
 @gray-light: #8D8D8E;
 @white: #fff;
 @radius: 20px;
+
+/* Media */
+@tablet: ~"(max-width: 808px)";  // Переменная для написания медиа запросов. (Планшеты)
