--- a/css/blocks/header.less
+++ b/css/blocks/header.less
@@ -2,6 +2,7 @@
 
 .header {
     padding: 1.2rem 0;                    /* padding 1.2rem (18px) сверху до хэдэра */
+    position: relative;
 }
 
 .header__inner {
@@ -9,4 +10,3 @@
     justify-content: space-between;       /* Разделяет элементы в header <--> */
     align-items: center;                  /* Выравниваем по вертикали header__inner */
 }
-
