--- a/css/style.less
+++ b/css/style.less
@@ -54,6 +54,7 @@ h1, h2, h3, h4, h5, h6 {
 @import "blocks/modal-contact";
 @import "blocks/form__group";
 @import "blocks/up";
+@import "blocks/burger";
 
 
 /* Helpers */
