--- a/css/blocks/work.less
+++ b/css/blocks/work.less
@@ -24,6 +24,12 @@
     border-top-right-radius: 17px;
     border-top-left-radius: 17px;
     overflow: hidden;
+
+    @media @mobileSmall {
+        & {
+            width: 370px;
+        }
+    }
 }
 
 .work__photo {   //Делаем адаптацию для нашей картинки
@@ -75,6 +81,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
+
+   
 }
 
 .btn-works {  
