--- a/css/style.less
+++ b/css/style.less
@@ -4,6 +4,7 @@
 html {
     font-size: 15px;          /* Теперь 1rem = 15px */
     cursor: default;
+    overflow-x: hidden;
 }
 
 body {
@@ -12,6 +13,9 @@ body {
     font-family: 'Montserrat', sans-serif;
     font-size: 1rem;          /* Исп. много размеров шрифтов - плохо */
     color: @black;            /* Переменная с цветом - черный */
+    overflow-x: hidden;
+    background: url(/images/symbols.png);
+    background-size: 1200px;
 
     &.no-scroll {  //Если у тега body есть тег no-scroll, тогда ты отменяем прокрутку колесика мыши
         overflow: hidden;  //Мы будем отменять скролл нашей страницы
