--- a/css/blocks/btn.less
+++ b/css/blocks/btn.less
@@ -17,6 +17,13 @@
         overflow: hidden;        /* Скрываем лишние элементы .border'a, чтобы наводить именно на кнопку и создавался эффект кольца */
         box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
 
+        @media @mobile {
+          & {
+            padding: 0.8rem 0.6rem;
+            font-size: 0.7rem;
+          }
+        }
+
         + .btn {              /*(+ означает от текущего элемента к следующему переход) Если идёт кнопка, и после неё идет опять след. кнопка, то для второй кнопки делаем margin-left: 1rem;, и будет отступ только у второго элемента .btn, первый игнорируется */
           margin-left: 1rem;
         }
