--- a/css/blocks/footer.less
+++ b/css/blocks/footer.less
@@ -27,6 +27,18 @@
     font-weight: 400;
     margin-right: 1.86rem;
 
+    @media @mobile {
+        & {
+            font-size: 0.8rem;
+        }
+    }
+
+    @media @mobileNormal {
+        & {
+            display: none;
+        }
+    }
+
     &:after {
         position: absolute;
         content: "";
@@ -47,6 +59,13 @@
 
     &:hover {
         color: @white;
+    }
+
+    
+    @media @mobile {
+        & {
+            font-size: 0.8rem;
+        }
     }
 }
 
@@ -132,6 +151,14 @@
 
     &:hover .footer__icon {
         fill: @white;
+    }
+
+    @media @mobileBig {
+        & {
+            width: 1.8rem;
+            height: 1.8rem;
+            padding: 0.37rem;
+        }
     }
 }
 
