--- a/css/blocks/nav.less
+++ b/css/blocks/nav.less
@@ -4,15 +4,16 @@
     display: flex;     /* Убрали пробелы между ссылками */
     height: 100%;      /* 100% высота, чтобы не ростягивались блоки вниз */
 
-    @media @tablet {  // Media for nav
+    @media @mobile {  // Media for nav
       & {
-        position: absolute;
+        position: fixed;
         transition: all .3s ease;
         display: flex;
         flex-direction: column;
         z-index: 3;
         top: 30px;
         right: -290px;
+       // position: fixed;
         
       }
     }                      // При сужении до ~767 делать навигацию display-none, и проявлять бургер. По клику на бергер мы появляем навигацию но немного уменьшеную.
@@ -33,14 +34,14 @@
     transition: .2s linear;
     overflow: hidden;          /* Скрываем иконку до появления */
 
-    @media @tablet {  // Media for nav
+    @media @mobile {  // Media for nav
       & {
-        transition: all 1s ease;
         display: flex;
+        transition: all 1s ease;
         justify-content: center;
         align-items: center;
 
-        padding: 1rem 2rem;
+        padding: 0.6rem 1.4rem;
 
         font-size: 0.8rem;
 
