--- a/css/blocks/social.less
+++ b/css/blocks/social.less
@@ -3,6 +3,12 @@
 .social {
     display: flex;                 /* Переворачиваем наши блоки .social__link */
     margin-bottom: 42px;
+
+    @media @mobile {
+        & {
+            margin-bottom: 22px;
+        }
+    }
  
     &__link {                      /* Цельный ссылочный блок, оболочка */
         display: flex;             /* Делаем флэксами наши ссылки чтобы менять их размер и так далее */
@@ -11,7 +17,14 @@
         border: 1px solid @black;
         border-radius: 50%;
         margin-right: 10px;
-        transition: .2s linear;
+        transition: all .3s ease;
+
+        @media @mobile {
+            & {
+                width: 2.5rem;
+                height: 2.5rem;
+            }
+        }
 
         &:hover {
             transform: translateY(-5px);
@@ -45,7 +58,7 @@
                     background-image:linear-gradient(45deg, #405de6, #5851db, #833ab4, #c13584, #e1306c, #fd1d1d); /* Цвет hover */
                     opacity: 0;    /* Скрываем цвет градиента */
                     z-index: -1;   /* Делаем этот элемент before за нашей иконкой */
-                    transition: .2s linear; 
+                    transition: all .3s ease; 
                 }
                 &:hover::before {
                     opacity: 1;    /* При наведении на нашу иконку показываем цвет градиент, чтобы был плавный */
@@ -62,6 +75,7 @@
 
         &:hover .social__icon {
             fill: @white;
+            transition: all .3s ease;
         }
         
     }
@@ -70,6 +84,12 @@
         padding: 8.5px 8.5px;           /* Делаем padding'i для иконки внутри чтобы её уменьшить */
         width: 2.7rem;
         height: 2.7rem;
+
+        @media @mobile {
+            & {
+                padding: 0.5rem 0.5rem;
+            }
+        }
 
         &-git {                      /* Иконка GitHub */
             padding: 7px 7px;
