--- a/css/vars.less
+++ b/css/vars.less
@@ -7,4 +7,12 @@
 @radius: 20px;
 
 /* Media */
-@tablet: ~"(max-width: 808px)";  // Переменная для написания медиа запросов. (Планшеты)
+
+@mobileSmall: ~"(max-width: 485px)";  // Переменная для написания медиа запросов. (tablet)
+@mobileNormal: ~"(max-width: 720px)";
+@mobileAvg: ~"(max-width: 797px)";  // Переменная для написания медиа запросов. (tablet)
+@mobile: ~"(max-width: 808px)";  // Переменная для написания медиа запросов. (tablet)
+@mobileBig: ~"(max-width: 885px)";  // Переменная для написания медиа запросов. (tablet)
+@tablet: ~"(max-width: 1200px)";  // Переменная для написания медиа запросов. (laptopTab)
+@laptopTwo: ~"(max-width: 1284px)";  // Переменная для написания медиа запросов. (laptopTab)
+@laptop: ~"(max-width: 1679px)";  // Переменная для написания медиа запросов. (laptop)
