--- a/css/blocks/modal.less
+++ b/css/blocks/modal.less
@@ -15,6 +15,18 @@
     z-index: 1000;  //Делаем чтобы маска, и потом модальное окно было поверх всего содержимого
 
     overflow: auto;
+
+    @media @laptopThree {
+        & {
+            padding: 1rem 3rem;
+        }
+    }
+
+    @media @tablet {
+        & {
+            padding: 1rem 3rem;
+        }
+    }
 }
 
 .modal__dialog {
