--- a/css/blocks/modal-resume.less
+++ b/css/blocks/modal-resume.less
@@ -2,6 +2,20 @@
 
 .modal__resume {
     padding: 5rem 14.4rem;
+    width: 100%;
+    height: 100%;
+
+    @media @laptopThree {
+        & {
+            padding: 3rem 10rem;
+        }
+    }
+
+    @media @tablet {
+        & {
+            padding: 1rem 2rem;
+        }
+    }
 }
 
 .modal__resume__title {
@@ -11,6 +25,18 @@
     text-align: center;
     text-transform: uppercase;
     margin-bottom: 3.66rem;
+
+    @media @laptopThree {
+        & {
+            margin-bottom: 3.4rem;
+        }
+    }
+
+    @media @tablet {
+        & {
+            margin-bottom: 3.3rem;
+        }
+    }
 }
 
 .modal__resume__buttons {
@@ -20,6 +46,18 @@
 
     &--margin {
         margin-bottom: 0;
+
+        @media @laptopThree {
+            & {
+                margin-bottom: 1rem;
+            }
+        }
+    }
+
+    @media @tablet {
+        & {
+            margin-bottom: 2.8rem;
+        }
     }
 }
 
@@ -87,6 +125,18 @@
 
 .modal__resume__main {
     margin-bottom: 4.93rem;
+
+    @media @laptopThree {
+        & {
+            margin-bottom: 3.5rem;
+        }
+    }
+
+    @media @tablet {
+        & {
+            margin-bottom: 2rem;
+        }
+    }
 }
 
 .modal__resume__inner {
