--- a/css/blocks/portfolio.less
+++ b/css/blocks/portfolio.less
@@ -33,6 +33,18 @@
         &:nth-child(1n + 4) {
             display: none;
         }
+
+        & {
+            width: 350px;
+            max-width: 350px;
+        }
+    }
+
+    @media @mobile698px {
+        & {
+            width: 400px;
+            max-width: 400px;
+        }
     }
     }
 }
