--- a/css/vars.less
+++ b/css/vars.less
@@ -9,10 +9,12 @@
 /* Media */
 
 @mobileSmall: ~"(max-width: 485px)";  // Переменная для написания медиа запросов. (tablet)
+@mobile698px: ~"(max-width: 698px)";
 @mobileNormal: ~"(max-width: 720px)";
 @mobileAvg: ~"(max-width: 797px)";  // Переменная для написания медиа запросов. (tablet)
 @mobile: ~"(max-width: 808px)";  // Переменная для написания медиа запросов. (tablet)
 @mobileBig: ~"(max-width: 885px)";  // Переменная для написания медиа запросов. (tablet)
 @tablet: ~"(max-width: 1200px)";  // Переменная для написания медиа запросов. (laptopTab)
 @laptopTwo: ~"(max-width: 1284px)";  // Переменная для написания медиа запросов. (laptopTab)
+@laptopThree: ~"(max-width: 1400px)";
 @laptop: ~"(max-width: 1679px)";  // Переменная для написания медиа запросов. (laptop)
